<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2015 k3b
*
* This file is part of de.k3b.android.LocationMapViewer (https://github.com/k3b/LocationMapViewer/) .
*
* This program is free software: you can redistribute it and/or modify it
* under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful, but WITHOUT
* ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
* FOR A PARTICULAR PURPOSE. See the GNU General Public License
* for more details.
*
* You should have received a copy of the GNU General Public License along with
* this program. If not, see <http://www.gnu.org/licenses/>
-->
<resources>

    <string name="label_select">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prefs_cat_overlays_title">Map Overlays</string>
    <string name="prefs_showLocation_summary">Show My Location</string>
    <string name="prefs_showMiniMap_summary">Show Minimap</string>
    <string name="prefs_cluster_points">Cluster Points</string>
    <string name="prefs_cluster_points_description">checked neighbour point shown as one red point</string>
    <string name="prefs_current_header">Current Position</string>
    <string name="prefs_current_north">North</string>
    <string name="prefs_current_east">East</string>
    <string name="prefs_current_zoom">Zoom</string>
    <string name="prefs_header_development">Debug/Development</string>
    <string name="prefs_guestures_debug_enable">Enable Guestures Debug</string>
    <string name="prefs_guestures_debug_enable_description">Guestures Debug Messages copied to clipboard and added to LogCat.</string>
    <string name="about_summary">About LocationMapViewer</string>
    <string name="about_content_about">"
<![CDATA[
<h1> LocationMapViewer </h1>
<p> An app that can display geografic info in a map. It has
 support for <strong>gpx</strong> and <strong>kml</strong>
 files and <strong>geo-uri-s</strong> and can work offline
 (without internet/wifi) once geodata is downloaded and cached. </p>
<p> Other Android apps can use LocationMapViewer through an
 Intent interface (see <a
href="https://github.com/k3b/LocationMapViewer/blob/master/geoIntentDemo/src/main/java/de/k3b/android/locationMapViewer/demo/GeoIntentDemoActivity.java">
 GeoIntentDemo.java</a>) or through html links similar to <a href="geo:0,0?q=53.0,8.0(Hello)">geo:0,0?q=53.0,8.0(Hello)</a>
 (&lt;a href=&quot;geo:0,0?q=53.0,8.0(Hello)&quot;&gt;geo:0,0?q=53.0,8.0(Hello)&lt;/a&gt;)<br />
</p>
]]>
"</string>

    <!-- added in version 0.3.* -->
    <string name="title_bookmark_list">Bookmarks</string>
    <string name="title_bookmark_edit">Bookmark</string>
    <string name="cmd_save"> Save </string>
    <string name="cmd_cancel"> Cancel </string>
    <string name="title_activity_geopoint_edit">Edit</string>
    <string name="title_rename">Rename</string>
    <string name="title_delete">Delete</string>
    <string name="title_close">Close</string>

    <string name="title_confirm_delete">"Confirm Delete "</string>
    <string name="format_question_delete">"Are you sure you want to permanently delete \n\n %1$s ? \n\n This is NOT undoable.</string>
    <string name="cmd_yes">Yes</string>
    <string name="cmd_no">No</string>
    <string name="bookmark_template_current">[Current Window] </string>
    <string name="bookmark_template_initial">[Inital Window] </string>
    <string name="bookmark_template_gps">"[GPS] "</string>

    <string name="title_cright_osm">"Map Tiles (c) <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> Contributors"</string>

    <string name="permission_error">Missing permisions</string>
    <string name="title_open_file">Open File</string>

    <string name="geo_show_menu_title">Show in map</string>
    <string name="settings_maps_forge_enable_tile">Use Mapsforge offline map</string>
    <string name="settings_maps_forge_enable_summary">... which you manually downloaded via pc</string>
    <string name="settings_maps_forge_dir_title">Mapsforge offline Folder</string>

</resources>
