<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2014-2021 k3b

This file is part of de.k3b.android.toGoZip (https://github.com/k3b/ToGoZip/)

This program is free software: you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
FOR A PARTICULAR PURPOSE. See the GNU General Public License
for more details.

You should have received a copy of the GNU General Public License along with
this program. If not, see <http://www.gnu.org/licenses/>
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/ic_launcher"
    android:key="preferences"
    android:title="@string/title_activity_settings">
    <PreferenceCategory
        android:key="first_category"
        android:title="@string/prefs_cat_overlays_title">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showLocation"
            android:summary="@string/prefs_showLocation_summary" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showMiniMap"
            android:summary="@string/prefs_showMiniMap_summary" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="clusterPoints"
            android:summary="@string/prefs_cluster_points"
            android:contentDescription="@string/prefs_cluster_points_description"
            />

        <de.k3b.android.widgets.AboutDialogPreference
            android:key="about"
            android:title="@string/about_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_current_header"
        android:key="third_category">
        <de.k3b.android.widgets.EditTextPreferenceWithSummary
            android:key="currentZoom"
            android:title="@string/prefs_current_zoom" />
        <de.k3b.android.widgets.EditTextPreferenceWithSummary
            android:key="currentNorth"
            android:title="@string/prefs_current_north" />
        <de.k3b.android.widgets.EditTextPreferenceWithSummary
            android:key="currentEast"
            android:title="@string/prefs_current_east" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_header_development"
        android:key="second_category">
        <!--
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="guesturesEnable"
            android:summary="@string/prefs_guestures_enable"
            android:contentDescription="@string/prefs_guestures_enable_description"
            />-->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="guesturesDebug"
            android:summary="@string/prefs_guestures_debug_enable"
            android:contentDescription="@string/prefs_guestures_debug_enable_description"
            />
    </PreferenceCategory>
</PreferenceScreen>
