<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2014-2021 k3b

This file is part of de.k3b.android.toGoZip (https://github.com/k3b/ToGoZip/)

This program is free software: you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful, but WITHOUT
ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
FOR A PARTICULAR PURPOSE. See the GNU General Public License
for more details.

You should have received a copy of the GNU General Public License along with
this program. If not, see <http://www.gnu.org/licenses/>
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/ic_launcher"
    android:key="preferences"
    android:title="@string/title_activity_settings">
    <PreferenceCategory
        android:key="pref_category_map"
        android:order="50"
        android:title="@string/geo_show_menu_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="mapsForgeEnabled"
            android:summary="@string/settings_maps_forge_enable_summary"
            android:title="@string/settings_maps_forge_enable_tile" />

        <de.k3b.android.widgets.EditTextPreferenceWithSummary
            android:key="mapsForgeDir"
            android:title="@string/settings_maps_forge_dir_title" />
    </PreferenceCategory>
</PreferenceScreen>
